@@ -1125,7 +1125,7 @@ int main (int argc, char **argv)
   #ifdef WITH_BRAIN
   if (user_options->brain_server == true)
   {
-    const int rc = brain_server (user_options->brain_host, user_options->brain_port, user_options->brain_password, user_options->brain_session_whitelist);
+    const int rc = brain_server (user_options->brain_host, user_options->brain_port, user_options->brain_password, user_options->brain_session_whitelist, user_options->brain_server_timer);
 
     hcfree (hashcat_ctx);
 
